-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.6.0, 4.7.2, 5.9.2
Clicking on the header of a column starting with an item with "Qt::NoItemFlags" never deselects the items.
Was working with 4.5.3
Attached: test case to reproduce
KW: QTableView, QItemSelectionModel
Steps to reproduce:
- Run attached sample
- Click header "2" to highlight (select) the second column
- Click header "2" again to remove the selections
- EXPECTED: Selections are removed
- ACTUAL: Selections are not removed
Doing the same steps for Header "1" properly selects/deselects the items.