QitemSelectionModel: Fix a bug in isColumnSelected

Previously the code for isColumnSelected and isRowSelected differed
slightly, in how unselectable indexes would be treated.

This made isColumnSelected return false for a column, which mixed
unselectable indexes and selected indexes. Thus in some situations,
the user could not deselect a column via a QTableView header.

By copying the isRowSelected code to isColumnSelected, rows and
columns behave identical.

Task-number: QTBUG-18001
Change-Id: I6ca85ac64b31a481fafeaa3bec958b18283eed8d
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>